@@ -2,6 +2,7 @@
 	* src/files.c (has_valid_path): Be more specific in how a given path
 	is invalid.  The change was improved by Rishabh Dave.
 	* doc/syntax/nanorc.nanorc: Show ^^ and M-^ as valid key names.
+	* src/prompt.c (do_statusbar_home): Make Home go always fully home.
 
 2016-01-29  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (do_insertfile): Do display the buffer when configured
